2005-10-09  Stefan Kost  <ensonic@users.sf.net>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	(gst_audiostestsrc_wave_get_type), (gst_audiotestsrc_class_init),
	(gst_audiotestsrc_init), (gst_audiotestsrc_create_sine),
	(gst_audiotestsrc_create_square), (gst_audiotestsrc_create_saw),
	(gst_audiotestsrc_create_triangle),
	(gst_audiotestsrc_create_silence),
	(gst_audiotestsrc_create_white_noise),
	(gst_audiotestsrc_init_pink_noise),
	(gst_audiotestsrc_generate_pink_noise_value),
	(gst_audiotestsrc_create_pink_noise),
	(gst_audiotestsrc_change_wave):
	* gst/audiotestsrc/gstaudiotestsrc.h:
	  fixed typo, added pink noise

2005-10-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c: (wavpack_type_find),
	(plugin_init):
	  Add wavpack and spc typefind functions from 0.8 branch.

2005-10-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c: (tar_type_find),
	(ar_type_find), (msdos_type_find), (plugin_init):
	  Add typefind functions for tar archives, ar archives,
	  RAR archives, and msdos-executables (dlls, exe, etc.).
	  Some of those would be wrongly identified as mpeg
	  streams of some sort before (#315550).

2005-10-09  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* gst/audioscale/gstaudioscale.c: (gst_audioscale_method_get_type):
	* gst/audiotestsrc/Makefile.am:
	* gst/audiotestsrc/gstaudiotestsrc.c:
	(gst_audiostestsrc_wave_get_type), (gst_audiotestsrc_base_init),
	(gst_audiotestsrc_class_init), (gst_audiotestsrc_init),
	(gst_audiotestsrc_src_fixate), (gst_audiotestsrc_setcaps),
	(gst_audiotestsrc_get_query_types), (gst_audiotestsrc_src_query),
	(gst_audiotestsrc_wait), (gst_audiotestsrc_unlock),
	(gst_audiotestsrc_create_sine), (gst_audiotestsrc_create_square),
	(gst_audiotestsrc_create_saw), (gst_audiotestsrc_create_triangle),
	(gst_audiotestsrc_create_silence),